[feature/state-editor] Fix property overflow again

--- a/src/assets/css/ide.css
+++ b/src/assets/css/ide.css
@@ -3549,7 +3549,7 @@ a.sidebar-hider {
 }
 
 .property-wrap {
-	/*overflow   : hidden;*/
+	overflow   : hidden;
 	position   : relative;
 	width      : 100%;
 	height     : 100%;
@@ -3559,8 +3559,8 @@ a.sidebar-hider {
 	        transform: translate(0,0);
 }
 
-#property-panel.hidden .property-wrap {
-	overflow: hidden;
+#property-panel.state-wide .property-wrap {
+	overflow: visible;
 }
 
 .property-panel-wrapper {
