--- a/src/assets/css/stateeditor.css
+++ b/src/assets/css/stateeditor.css
@@ -826,9 +826,9 @@
 	right     : -60px;
 	top       : 0;
 	width     : 52px;
-	height    : 16px;
+	height    : 17px;
 	/*display   : none;*/
-	background: rgba(0,0,0,.8);
+	background: rgba(0,0,0,.6);
 	z-index   : 100;
 	padding   : 10px 0 8px 8px;
 
